Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30217

Assertion `mode_ == m_local || transaction_.is_streaming()' failed in int wsrep::client_state::bf_abort(wsrep::seqno)

    XMLWordPrintable

Details

    Description

      This issue appears to be similar to MDEV-29493 and MDEV-28472 with a slightly different stack.

       
      Initiate  sysbench data load on node1
      sysbench /usr/share/sysbench/oltp_insert.lua  --mysql-storage-engine=innodb --table-size=10000 --tables=8 --threads=8 --mysql-db=test --mysql-user=root --db-driver=mysql --mysql-socket=/test/mtest/mariadb-10.6.12-linux-x86_64/node1/node1_socket.sock prepare
       
      Initiate  sysbench OLTP load on node1 
      sysbench /usr/share/sysbench/oltp_write_only.lua --time=1000  --events=0 --index_updates=10 --non_index_updates=10 --distinct_ranges=15 --order_ranges=15 --tables=8 --threads=8 --table-size=100000  --mysql-db=test --mysql-user=root --db-driver=mysql --mysql-socket=/test/mtest/mariadb-10.6.12-linux-x86_64/node1/node1_socket.sock --db-ps-mode=disable run &
       
      Initiate  sysbench OLTP load on node2 
      sysbench /usr/share/sysbench/oltp_write_only.lua --time=1000  --events=0 --index_updates=10 --non_index_updates=10 --distinct_ranges=15 --order_ranges=15 --tables=8 --threads=8 --table-size=100000  --mysql-db=test --mysql-user=root --db-driver=mysql --mysql-socket=/test/mtest/mariadb-10.6.12-linux-x86_64/node2/node2_socket.sock --db-ps-mode=disable run &
      

      Leads to

      10.6.12 dd5f4b3625def2ee74d8f9a6b55d1368ba597a84

      Core was generated by `/test/mtest/mariadb-10.6.12-linux-x86_64/bin/mysqld --defaults-file=/test/mtest'.
      Program terminated with signal SIGABRT, Aborted.
      #0  0x0000000070000002 in ?? ()
      [Current thread is 1 (Thread 0x13fb4c4db700 (LWP 908760))]
      (gdb) bt
      #0  0x0000000070000002 in ?? ()
      #1  0x00003c082e0f11a4 in _raw_syscall () at /home/roc/rr/rr/src/preload/raw_syscall.S:120
      #2  0x00003c082e0ec2ce in traced_raw_syscall (call=<optimized out>) at /home/roc/rr/rr/src/preload/syscallbuf.c:278
      #3  0x00003c082e0f00d3 in syscall_hook_internal (call=0x150e711fefa0) at /home/roc/rr/rr/src/preload/syscallbuf.c:3420
      #4  syscall_hook (call=0x150e711fefa0) at /home/roc/rr/rr/src/preload/syscallbuf.c:3454
      #5  0x00003c082e0ec0b0 in _syscall_hook_trampoline () at /home/roc/rr/rr/src/preload/syscall_hook.S:313
      #6  0x00003c082e0ec10f in __morestack () at /home/roc/rr/rr/src/preload/syscall_hook.S:458
      #7  0x00003c082e0ec169 in _syscall_hook_trampoline_89_c2_f7_da () at /home/roc/rr/rr/src/preload/syscall_hook.S:512
      #8  0x0000305742c73f6c in __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #9  0x00005583a08ba250 in my_write_core (sig=sig@entry=6) at /test/mtest/10.6/mysys/stacktrace.c:424
      #10 0x00005583a014f738 in handle_fatal_signal (sig=6) at /test/mtest/10.6/sql/signal_handler.cc:355
      #11 <signal handler called>
      #12 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #13 0x0000000067e30859 in __GI_abort () at abort.c:79
      #14 0x0000000067e30729 in __assert_fail_base (fmt=0x67fc6588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x5583a0b600e0 "mode_ == m_local || transaction_.is_streaming()", 
          file=0x5583a0981bb0 "/test/mtest/10.6/wsrep-lib/include/wsrep/client_state.hpp", line=667, function=<optimized out>) at assert.c:92
      #15 0x0000000067e41fd6 in __GI___assert_fail (assertion=assertion@entry=0x5583a0b600e0 "mode_ == m_local || transaction_.is_streaming()", 
          file=file@entry=0x5583a0981bb0 "/test/mtest/10.6/wsrep-lib/include/wsrep/client_state.hpp", line=line@entry=667, function=function@entry=0x5583a0b601c8 "int wsrep::client_state::bf_abort(wsrep::seqno)")
          at assert.c:101
      #16 0x00005583a04280c0 in wsrep::client_state::bf_abort (bf_seqno=..., this=0x40bb7c007588) at /test/mtest/10.6/wsrep-lib/include/wsrep/transaction_id.hpp:52
      #17 wsrep_bf_abort (bf_thd=bf_thd@entry=0x615568000ff8, victim_thd=victim_thd@entry=0x40bb7c000ff8) at /test/mtest/10.6/sql/wsrep_thd.cc:391
      #18 0x00005583a043022a in wsrep_thd_bf_abort (bf_thd=bf_thd@entry=0x615568000ff8, victim_thd=victim_thd@entry=0x40bb7c000ff8, signal=signal@entry=1 '\001') at /test/mtest/10.6/sql/service_wsrep.cc:222
      #19 0x00005583a0454f27 in lock_wait_wsrep_kill (bf_trx=bf_trx@entry=0x7f1e30005880, thd_id=<optimized out>, trx_id=<optimized out>) at /test/mtest/10.6/storage/innobase/handler/ha_innodb.cc:18663
      #20 0x00005583a04f99a6 in lock_wait_wsrep (trx=trx@entry=0x7f1e30005880) at /test/mtest/10.6/storage/innobase/lock/lock0lock.cc:1005
      #21 0x00005583a0500025 in lock_wait (thr=thr@entry=0x19347806aa30) at /test/mtest/10.6/storage/innobase/lock/lock0lock.cc:1773
      #22 0x00005583a05eeacc in row_mysql_handle_errors (new_err=new_err@entry=0x13fb4c4d91d4, trx=trx@entry=0x7f1e30005880, thr=thr@entry=0x19347806aa30, savept=savept@entry=0x13fb4c4d91d8)
          at /test/mtest/10.6/storage/innobase/row/row0mysql.cc:681
      #23 0x00005583a05eff0a in row_insert_for_mysql (mysql_rec=mysql_rec@entry=0x193478069088 "\377\204", <incomplete sequence \303>, prebuilt=0x19347806a1b0, ins_mode=<optimized out>)
          at /test/mtest/10.6/storage/innobase/row/row0mysql.cc:1319
      #24 0x00005583a04670b0 in ha_innobase::write_row (this=0x1934780694f0, record=0x193478069088 "\377\204", <incomplete sequence \303>) at /test/mtest/10.6/storage/innobase/handler/ha_innodb.cc:7918
      #25 0x00005583a0160791 in handler::ha_write_row (this=0x1934780694f0, buf=0x193478069088 "\377\204", <incomplete sequence \303>) at /test/mtest/10.6/sql/handler.cc:7582
      #26 0x00005583a02cfc95 in Rows_log_event::write_row (this=this@entry=0x61556805d108, rgi=rgi@entry=0x615568022080, overwrite=false) at /test/mtest/10.6/sql/log_event_server.cc:7343
      #27 0x00005583a02cfff7 in Write_rows_log_event::do_exec_row (this=0x61556805d108, rgi=0x615568022080) at /test/mtest/10.6/sql/log_event_server.cc:7571
      #28 0x00005583a02c31ef in Rows_log_event::do_apply_event (this=0x61556805d108, rgi=0x615568022080) at /test/mtest/10.6/sql/log_event_server.cc:5733
      #29 0x00005583a04264a8 in Log_event::apply_event (rgi=0x615568022080, this=0x61556805d108) at /test/mtest/10.6/sql/log_event.h:1499
      #30 wsrep_apply_events (thd=thd@entry=0x615568000ff8, rli=<optimized out>, events_buf=<optimized out>, buf_len=<optimized out>) at /test/mtest/10.6/sql/wsrep_applier.cc:208
      #31 0x00005583a0409c4c in apply_events (thd=thd@entry=0x615568000ff8, rli=<optimized out>, data=..., err=...) at /test/mtest/10.6/wsrep-lib/include/wsrep/buffer.hpp:47
      #32 0x00005583a040a244 in Wsrep_applier_service::apply_write_set (this=0x13fb4c4dac10, ws_meta=..., data=..., err=...) at /test/mtest/10.6/sql/wsrep_high_priority_service.cc:583
      #33 0x00005583a09460df in apply_write_set (server_state=..., high_priority_service=..., ws_handle=..., ws_meta=..., data=...) at /test/mtest/10.6/wsrep-lib/src/server_state.cpp:332
      #34 0x00005583a0946bff in wsrep::server_state::on_apply (this=<optimized out>, high_priority_service=..., ws_handle=..., ws_meta=..., data=...) at /test/mtest/10.6/wsrep-lib/src/server_state.cpp:1119
      #35 0x00005583a0959cb1 in wsrep::high_priority_service::apply (data=..., ws_meta=..., ws_handle=..., this=0x13fb4c4dac10) at /test/mtest/10.6/wsrep-lib/include/wsrep/high_priority_service.hpp:47
      #36 (anonymous namespace)::apply_cb (ctx=ctx@entry=0x13fb4c4dac10, wsh=wsh@entry=0x13fb4c4d9c40, flags=flags@entry=65, buf=buf@entry=0x13fb4c4d9c50, meta=meta@entry=0x13fb4c4d9f00, 
          exit_loop=exit_loop@entry=0x13fb4c4d9ebf) at /test/mtest/10.6/wsrep-lib/src/wsrep_provider_v26.cpp:507
      #37 0x000010a761e97695 in galera::TrxHandleSlave::apply (this=this@entry=0x61556805da80, recv_ctx=recv_ctx@entry=0x13fb4c4dac10, 
          apply_cb=0x5583a0959b9b <(anonymous namespace)::apply_cb(void*, wsrep_ws_handle_t const*, uint32_t, wsrep_buf_t const*, wsrep_trx_meta_t const*, wsrep_bool_t*)>, meta=..., 
          exit_loop=exit_loop@entry=@0x13fb4c4d9ebf: false) at /test/galera_4x_opt/galera/src/trx_handle.cpp:396
      #38 0x000010a761eade4e in galera::ReplicatorSMM::apply_trx (this=0x5583a298d860, recv_ctx=0x13fb4c4dac10, ts=...) at /test/galera_4x_opt/galera/src/replicator_smm.cpp:516
      --Type <RET> for more, q to quit, c to continue without paging--
      #39 0x000010a761eb20a8 in galera::ReplicatorSMM::process_trx (this=0x5583a298d860, recv_ctx=0x13fb4c4dac10, ts_ptr=...) at /test/galera_4x_opt/galera/src/replicator_smm.cpp:2138
      #40 0x000010a761ee3b19 in galera::GcsActionSource::process_writeset (this=0x5583a29bdfa0, recv_ctx=0x13fb4c4dac10, act=..., exit_loop=@0x13fb4c4da83f: false)
          at /test/galera_4x_opt/galera/src/gcs_action_source.cpp:62
      #41 0x000010a761ee4563 in galera::GcsActionSource::dispatch (this=0x5583a29bdfa0, recv_ctx=0x13fb4c4dac10, act=..., exit_loop=<optimized out>) at /test/galera_4x_opt/galera/src/gcs_action_source.cpp:110
      #42 0x000010a761ee4b22 in galera::GcsActionSource::process (this=0x5583a29bdfa0, recv_ctx=0x13fb4c4dac10, exit_loop=@0x13fb4c4da83f: false) at /test/galera_4x_opt/galera/src/gcs_action_source.cpp:186
      #43 0x000010a761eaf4f0 in galera::ReplicatorSMM::async_recv (this=0x5583a298d860, recv_ctx=0x13fb4c4dac10) at /test/galera_4x_opt/galera/src/replicator_smm.cpp:402
      #44 0x000010a761e83df1 in galera_recv (gh=<optimized out>, recv_ctx=<optimized out>) at /test/galera_4x_opt/galera/src/wsrep_provider.cpp:264
      #45 0x00005583a095a4c2 in wsrep::wsrep_provider_v26::run_applier (this=<optimized out>, applier_ctx=<optimized out>) at /test/mtest/10.6/wsrep-lib/src/wsrep_provider_v26.cpp:858
      #46 0x00005583a04288ec in wsrep_replication_process (thd=0x615568000ff8, arg=<optimized out>) at /test/mtest/10.6/sql/wsrep_server_state.h:51
      #47 0x00005583a0416f89 in start_wsrep_THD (arg=0x5583a2ce25f0) at /test/mtest/10.6/sql/wsrep_mysqld.h:539
      #48 0x0000305742c6b609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #49 0x0000000067f2d133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Attachments

        1. bt_all.txt
          334 kB
        2. n1.cnf
          1.0 kB
        3. n2.cnf
          1.0 kB
        4. n3.cnf
          1.0 kB
        5. node0.err
          1.99 MB
        6. transactions.zz
          0.9 kB
        7. transactions-bkp.yy
          4 kB

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              ramesh Ramesh Sivaraman
              Votes:
              3 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.